# Mesh-Subdivision-Decimation-OpenGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Mesh.cpp  Mesh.h  MeshMcd.cpp  MeshMcd.h  MeshSd.cpp  MeshSd.h  README.md  Subdivision.cpp  Subdivision.h  W_edge.cpp  W_edge.h  WingedEdge  WingedEdge.cpp  WingedEdge.cpp.c  WingedEdge.h  cmake_install.cmake  mytest  obj_view  obj_view.cpp  subd  subd.cpp  test.cpp
